--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 									<div id="embed05">
 										<div class="frame-inner">
 											<div class="frame">
-												<iframe src="https://vwkyc.github.io/group11-dataviz/Question1.html" title="Question1" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+												<iframe src="https://vwkyc.github.io/vegalite-dataviz/Question1.html" title="Question1" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
 											</div>
 										</div>
 									</div>
@@ -38,7 +38,7 @@
 									<div id="embed06">
 										<div class="frame-inner">
 											<div class="frame">
-												<iframe src="https://vwkyc.github.io/group11-dataviz/Question2.html" title="Question2" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+												<iframe src="https://vwkyc.github.io/vegalite-dataviz/Question2.html" title="Question2" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
 											</div>
 										</div>
 									</div>
@@ -47,7 +47,7 @@
 									<div id="embed07">
 										<div class="frame-inner">
 											<div class="frame">
-												<iframe src="https://vwkyc.github.io/group11-dataviz/Question3.html" title="Question3" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+												<iframe src="https://vwkyc.github.io/vegalite-dataviz/Question3.html" title="Question3" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
 											</div>
 										</div>
 									</div>
@@ -56,7 +56,7 @@
 									<div id="embed08">
 										<div class="frame-inner">
 											<div class="frame">
-												<iframe src="https://vwkyc.github.io/group11-dataviz/Question4.html" title="Question4" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+												<iframe src="https://vwkyc.github.io/vegalite-dataviz/Question4.html" title="Question4" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
 											</div>
 										</div>
 									</div>
@@ -72,7 +72,7 @@
 									<div id="embed02">
 										<div class="frame-inner">
 											<div class="frame">
-												<iframe src="https://vwkyc.github.io/group11-dataviz/Viz1.html" title="P3V1" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+												<iframe src="https://vwkyc.github.io/vegalite-dataviz/Viz1.html" title="P3V1" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
 											</div>
 										</div>
 									</div>
@@ -81,7 +81,7 @@
 									<div id="embed03">
 										<div class="frame-inner">
 											<div class="frame">
-												<iframe src="https://vwkyc.github.io/group11-dataviz/Viz2.html" title="P3V2" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+												<iframe src="https://vwkyc.github.io/vegalite-dataviz/Viz2.html" title="P3V2" allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
 											</div>
 										</div>
 									</div>
